--- a/css/style.css
+++ b/css/style.css
@@ -20,3 +20,55 @@ body {
 a {
     text-decoration: none;
 }
+
+.section-1 {
+    max-width: 100vw;
+    padding: 20px 15vw;
+}
+
+.container {
+    padding: 0 15vw;
+}
+
+.indent-top {
+    padding-top: 21vh;
+}
+
+.block img {
+    border-radius: 5px;
+    width: 93%;
+    height: 100%;
+    margin: 10px;
+}
+
+.block_txt {
+    position: absolute;
+    /* margin-bottom: -410px; */
+    text-align: center;
+    color: white;
+    padding: 20px;
+    box-sizing: border-box;
+    font-family: 'Prosto One', sans-serif;
+    text-align: left;
+    z-index: 1;
+    font-size: 1vw;
+}
+
+.section_button {
+    background-color: black;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 3.5vw;
+    height: 3.5vw;
+    border-radius: 5px;
+    transition: all 0.3s ease;
+    position: absolute;
+    z-index: 1;
+    transform: translate(0.65vw, -4.3vw);
+
+}
+
+.section_button:hover {
+    background-color: #F05A00;
+}
