--- a/css/style.css
+++ b/css/style.css
@@ -34,6 +34,10 @@ a {
     padding-top: 21vh;
 }
 
+.indent_bottom {
+    margin-left: 20px;
+}
+
 .block img {
     border-radius: 5px;
     width: 93%;
@@ -52,6 +56,20 @@ a {
     text-align: left;
     z-index: 1;
     font-size: 1vw;
+}
+
+.block_txt_big {
+    font-size: 2vw;
+}
+
+#section_1_img_1 {
+    width: 95%;
+    height: 94.4%;
+}
+
+#section_1_img_2 {
+    width: 90%;
+    height: 94.4%;
 }
 
 .section_button {
@@ -105,6 +123,14 @@ a {
     cursor: pointer;
 }
 
+.text_card {
+    font-weight: 600;
+}
+
+.text_clr {
+    color: #DEDBDB;
+}
+
 .content-1 {
     justify-content: space-between;
 }
@@ -134,4 +160,11 @@ a {
 .txt_price p {
     margin-right: 10px;
     align-items: end;
+}
+
+.icon_price {
+    position: relative;
+    top: 16px;
+    left: 1vw;
+    cursor: pointer;
 }
