--- a/css/style.css
+++ b/css/style.css
@@ -100,7 +100,8 @@ a {
 
 .main_card-product {
     width: 18vw;
-    min-width: 220px;
+    height: 100%;
+    min-width: 270px;
     padding: 1vw;
     color: black;
     margin: 20px;
@@ -167,4 +168,11 @@ a {
     top: 16px;
     left: 1vw;
     cursor: pointer;
+}
+
+.wrap {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    padding: 3vw;
 }
