--- a/css/style.css
+++ b/css/style.css
@@ -98,7 +98,7 @@ a {
     background-color: white;
 }
 
-.main_card-product {
+.main_card_product {
     width: 18vw;
     height: 100%;
     min-width: 270px;
@@ -109,7 +109,7 @@ a {
     transition: all 0.3s ease;
 }
 
-.main_card-product:hover {
+.main_card_product:hover {
     scale: 1.05;
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.3);
 }
@@ -120,7 +120,7 @@ a {
 
 }
 
-.card-product_icon svg {
+.card_product_icon svg {
     cursor: pointer;
 }
 
@@ -287,7 +287,7 @@ a {
     color: #F05A00;
 }
 
-.content-center {
+.content_center {
     justify-content: end;
     align-items: center;
     padding: 0px 7vw 20px 20px;
