--- a/css/style.css
+++ b/css/style.css
@@ -349,3 +349,23 @@ a {
 .indent_news {
     margin: 5vw 0;
 }
+
+
+.footer_flex {
+    display: flex;
+    justify-content: space-around;
+}
+
+.footer_link {
+    display: flex;
+    flex-direction: column;
+    margin: 40px;
+    font-size: 16px;
+
+
+}
+
+.footer_link a {
+    padding: 10px 0;
+    color: rgb(217, 218, 222);
+}
