add shopping cart

--- a/css/style.css
+++ b/css/style.css
@@ -30,8 +30,8 @@ a {
     padding: 0 15vw;
 }
 
-.indent-top {
-    padding-top: 21vh;
+.indent_top {
+    padding-top: 22vh;
 }
 
 .indent_bottom {
