--- a/css/basket.css
+++ b/css/basket.css
@@ -150,3 +150,22 @@
     font-family: 'Prosto One', sans-serif;
     font-size: 20px;
 }
+
+.text_grey {
+    color: #DEDBDB;
+    position: relative;
+    left: 2vw;
+}
+
+.txt_width {
+    width: 50px;
+}
+
+.orange {
+    color: #8A8A8A;
+}
+
+.orange:hover {
+    color: #F05A00;
+    cursor: pointer;
+}
